# godsvagn

./: .gitignore  Cargo.toml  README.md  config.toml  debpkg.sh
.github/workflows/: build.yml  check.yml  metapackage.yml
crates/filemeta/: Cargo.toml
crates/filemeta/src/: lib.rs
crates/godsvagn-repogen/: Cargo.toml
crates/godsvagn-repogen/src/: main.rs
crates/godsvagn-server/: Cargo.toml
crates/godsvagn-server/src/: main.rs
crates/indexgen/: Cargo.toml
crates/indexgen/src/: lib.rs
crates/package/: Cargo.toml
crates/package/src/: lib.rs
crates/parsedeb/: Cargo.toml
crates/parsedeb/src/: lib.rs  tests.rs
crates/parsedeb/src/testfiles/: boring.control  comments.control  multiline.control  noextranewline.control  novalue.control
metapackage/DEBIAN/: control
migrations/: 20250623201239_package_list.sql
src/: generate_files.rs  lib.rs  main.rs
