[workspace]
default-members = ["crates/godsvagn-server"]
members = ["crates/package", "crates/filemeta", "crates/indexgen", "crates/parsedeb", "crates/godsvagn-repogen", "crates/godsvagn-server"]
resolver = "3"

[workspace.dependencies]
parsedeb = { path = "crates/parsedeb" }
filemeta = { path = "crates/filemeta" }
indexgen = { path = "crates/indexgen" }
package = { path = "crates/package" }

