[package]
name = "godsvagn-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "process"] }
axum = "0.8"
argh = "0.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.8"
reqwest = { version = "0.12.22", features = ["json"] }
thiserror = "2.0.12"
jsonwebtoken = "10.2.0"
regex = "1.11.1"
tempfile = "3.20.0"
futures-util = "0.3.31"
parsedeb = { workspace = true }
bytes = "1.10.1"
rand = "0.9.1"

